--- a/projects/application_server/templates/preview.html
+++ b/projects/application_server/templates/preview.html
@@ -1,40 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preview</title>
-</head>
-<body>
-    <h1>Preview</h1>
-    <img id="videoFrame" src="">
-    <script>
-        const img = document.getElementById('videoFrame');
-        const ws = new WebSocket('ws://127.0.0.1:8888/stream/object_detection');
-        ws.binaryType = 'blob';
+{% extends "base.html" %}
 
-        ws.onmessage = function(event) {
-            const url = URL.createObjectURL(event.data);
-            img.src = url;
-        };
+{% block title %}
+Preview
+{% endblock %}
 
-        ws.onerror = function(event) {
-            console.error("WebSocket error observed:", event);
-        };
+{% block content %}
+<h2>Preview to testing streaming.</h2>
+<img id='video_frame' src=''>
+{% endblock %}
 
-        window.addEventListener('beforeunload', () => {
-            if (ws.readyState === WebSocket.OPEN) {
-                ws.close(1000, "Client closed connection");
-            }
-        });
+{% block scripts %}
+<script>
+    const img = document.getElementById('video_frame');
+    const ws = new WebSocket('ws://127.0.0.1:8888/stream/object_detection');
+    ws.binaryType = 'blob';
 
-        ws.onclose = function(event) {
-            if (!event.wasClean) {
-                console.error(`WebSocket close with error: ${event.reason}`);
-            } else {
-                console.log('WebSocket closed cleanly');
-            }
-        };
-    </script>
-</body>
-</html>
+    // 프레임 이미지를 갱신한다.
+    ws.onmessage = function(event) {
+        const url = URL.createObjectURL(event.data);
+        img.src = url;
+    };
+    // 에러 발생 시 콘솔 출력한다. (안 볼 것 같은데...?)
+    ws.onerror = function(event) {
+        console.error('websocket error:', event);
+    };
+    // 브라우저 탭 닫았을 때 웹소켓 연결 해제 신호를 서버에 보낸다.
+    // 추론 서버의 자원 절약을 위해!
+    window.addEventListener('beforeunload', () => {
+        if (ws.readyState === WebSocket.OPEN) {
+            ws.close(1000, 'client closed the connection.');
+        }
+    });
+    // 웹소켓 닫힌 후 후처리(로깅).
+    ws.onclose = function(event) {
+        if (!event.wasClean) {
+            console.error(`websocket close with some error: ${event.reason}`);
+        }
+        else {
+            console.log('websocket closed cleanly.')
+        }
+    };
+</script>
+{% endblock %}
