--- a/projects/application_server/templates/base.html
+++ b/projects/application_server/templates/base.html
@@ -1,31 +1,19 @@
-<!-- HTML 베이스 코드 -->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    {% block head_extra %}{% endblock %}
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>{% block title %}{% endblock %}</title>
+  <link rel="stylesheet" href="/static/css/vendor/bootstrap.min.css">
+  {% block head %}{% endblock %}
 </head>
+
 <body>
-    <header>
-        {% block header %}{% endblock %}
-    </header>
-
-    <main role="main" class="container">
-        {% block content %}{% endblock %}
-    </main>
-
-    <footer>
-        {% block footer %}
-            <p>by Seunghyeon Kim</p>
-        {% endblock %}
-    </footer>
-
-    {% block scripts %}{% endblock %}
+  {% block partials %}{% endblock %}
+  {% block content %}{% endblock %}
+  <script src="/static/js/vendor/bootstrap.bundle.min.js"></script>
+  {% block scripts %}{% endblock %}
 </body>
+
 </html>
